--- a/index.html
+++ b/index.html
@@ -38,12 +38,17 @@
                             <a class="menu__link" href="#contact">КОНТАКТЫ</a>
                         </li>
                     </ul>
-                    <button class="header__button" type="button">ЗАКАЗАТЬ ЗВОНОК</button>
+                    <a class="header__link-btn"  href="tel:88009009090">ЗАКАЗАТЬ ЗВОНОК</a>
+                    <!-- <button class="header__button" type="button">ЗАКАЗАТЬ ЗВОНОК</button> -->
                 </nav>
             </div>
         </header>
 
         <main>
+            <script>
+                document.addEventListener('click', event => {    if (event.target.matches('button')) {        event.target.focus()    }})
+            </script>
+
             <section class="section hero">
                 <div class="container hero__container">
                     <h1 class="hero__title">GAME OVER</h1>
@@ -54,13 +59,15 @@
                     </div>
                     <a class="hero__link-booking" href="#booking">Забронировать</a>
 
-                    <!-- <button class="hero__button-booking" type="button">Забронировать</button> -->
                     <a class="hero__link" href="#rest">
-                        <img src="images/hero/down.svg" alt="down-button" class="hero__link-img">
-                        <!-- <button class="hero__link-btn"> -->
-                            <!-- <img src="images/down.png" alt="down-button" class="hero__link-img"> -->
-                        <!-- </button> -->
-                        <!-- <img src="images/down.png" alt="down-button" class="hero__link-img"> -->
+                        <svg tabindex=0 class="hero__link-img"
+                            width="97" height="97" viewbox="0 0 97 97" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle class="hero__svg-path" cx="48.5" cy="48.5" r="48" stroke="white"/>
+                            <rect class="hero__svg-path" x="48.5807" y="58.0737" width="1.82001" height="20.0201" transform="rotate(-134.997 48.5807 58.0737)" fill="white"/>
+                            <rect class="hero__svg-path" x="34.4255" y="43.9161" width="1.82001" height="20.0201" transform="rotate(-44.9975 34.4255 43.9161)" fill="white"/>
+                        </svg>
+                        <!-- <img src="images/hero/down.svg" alt="down-button" class="hero__link-img"> -->
+                       
                     </a>
                 </div>
             </section>
@@ -221,7 +228,7 @@
                                     <div class="booking__fieldset-wrap-name-tel booking__fieldset-wrap-name-tel_style-basis">
                                         <div>
                                             <label class="booking__fieldset-label" for="tel">Номер телефона</label>
-                                            <input type="text" class="booking__fieldset-input" inputmode="tel" id="tel" required title="+7-(_ _ _)-_ _ _-_ _-_ _" pattern="^\+?[7-8]-?[0-9]{3}-?[0-9]{3}-?[0-9]{2}-?[0-9]{2}$">
+                                            <input type="text" class="booking__fieldset-input booking__fieldset-input-tel" inputmode="tel" id="tel" required title="+7-(_ _ _)-_ _ _-_ _-_ _" pattern="^\+?[7-8]-?[0-9]{3}-?[0-9]{3}-?[0-9]{2}-?[0-9]{2}$">
                                         </div> <div>
                                             <label for="mail"  class="booking__fieldset-label">E-mail</label>
                                             <input type="text" class="booking__fieldset-input" inputmode="tel" id="mail" required>
@@ -303,15 +310,55 @@
                 </div>
             </section>
 
-            <section class="section questions">
+            <section class="section questions" id="questios">
                 <div class="container">
                     <h2 class="title questions__title">Частые вопросы</h2>
                     <ul>
-                        <li class="questions__element">Можно ли забронировать комнату онлайн?</li>
-                        <li class="questions__element">Могут ли мне вернуть деньги за бронь?</li>
-                        <li class="questions__element">Какая комната самая популярная?</li>
-                        <li class="questions__element">Как получить VIP карту?</li>
-                        <li class="questions__element">Какая комната самая популярная</li>
+                        <li class="questions__element">Можно ли забронировать комнату онлайн?
+                            <a href="#questios" class="questions__link">
+                                <svg tabindex=0 class="questions__svg" width="46" height="46" viewBox="0 0 46 46" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <circle cx="23" cy="23" r="22" stroke="#440F51" stroke-width="2"/>
+                                    <path class="questions__svg-path" d="M22.8305 14H23.5085V34H22.8305V14Z" fill="#440F51"/>
+                                    <path d="M13 24.1695V23.4915H33V24.1695H13Z" fill="#440F51"/>
+                                    </svg>
+                            </a>
+                        </li>
+                        <li class="questions__element">Могут ли мне вернуть деньги за бронь?
+                            <a href="#questios" class="questions__link">
+                                <svg tabindex=0 class="questions__svg-white" width="46" height="46" viewBox="0 0 46 46" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <circle cx="23.0001" cy="23" r="22" stroke="white" stroke-width="2"/>
+                                    <path class="questions__svg-path" d="M22.8306 14H23.5086V34H22.8306V14Z" fill="white"/>
+                                    <path d="M13.0001 24.1695V23.4915H33.0001V24.1695H13.0001Z" fill="white"/>
+                                    </svg>
+                            </a>
+                        </li>
+                        <li class="questions__element">Какая комната самая популярная?
+                            <a href="#questios" class="questions__link">
+                                <svg tabindex=0 class="questions__svg" width="46" height="46" viewBox="0 0 46 46" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <circle cx="23" cy="23" r="22" stroke="#440F51" stroke-width="2"/>
+                                    <path class="questions__svg-path" d="M22.8305 14H23.5085V34H22.8305V14Z" fill="#440F51"/>
+                                    <path d="M13 24.1695V23.4915H33V24.1695H13Z" fill="#440F51"/>
+                                    </svg>
+                            </a>
+                        </li>
+                        <li class="questions__element">Как получить VIP карту?
+                            <a href="#questios" class="questions__link">
+                                <svg tabindex=0 class="questions__svg-white" width="46" height="46" viewBox="0 0 46 46" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <circle cx="23.0001" cy="23" r="22" stroke="white" stroke-width="2"/>
+                                    <path class="questions__svg-path" d="M22.8306 14H23.5086V34H22.8306V14Z" fill="white"/>
+                                    <path d="M13.0001 24.1695V23.4915H33.0001V24.1695H13.0001Z" fill="white"/>
+                                    </svg>
+                            </a>
+                        </li>
+                        <li class="questions__element">Какая комната самая популярная
+                            <a href="#questios" class="questions__link">
+                                <svg tabindex=0 class="questions__svg" width="46" height="46" viewBox="0 0 46 46" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <circle  cx="23" cy="23" r="22" stroke="#440F51" stroke-width="2"/>
+                                    <path class="questions__svg-path" d="M22.8305 14H23.5085V34H22.8305V14Z" fill="#440F51"/>
+                                    <path  d="M13 24.1695V23.4915H33V24.1695H13Z" fill="#440F51"/>
+                                    </svg>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </section>
