--- a/index.html
+++ b/index.html
@@ -143,8 +143,16 @@
                         <fieldset class="booking__fieldset">
                             <legend class="booking__fieldset-title">Выбери зал</legend>
 
+
+
+
                                 <input type="radio" name="room" id="room_80" value="80-vibes" class="booking__radio-hall visually-hidden">
                                 <label for="room_80" class="booking__label-hall">80's vibes</label>
+                                <!-- <label class="booking__label-hall">
+                                    <input type="radio" name="room" id="room_star" value="star-wars" class="booking__radio-hall visually-hidden">
+                                    <span class="b00king__custom-radio"></span>
+                                </label> -->
+                
 
                                 <input type="radio" name="room" id="room_star" value="star-wars" class="booking__radio-hall visually-hidden">
                                 <label for="room_star" class="booking__label-hall">star wars</label>
