--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <a class="hero__link" href="#rest">
                         <svg tabindex=0 class="hero__link-img"
                             width="97" height="97" viewbox="0 0 97 97" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <circle class="hero__svg-path" cx="48.5" cy="48.5" r="48" stroke="white"/>
+                            <!-- <circle class="hero__svg-path" cx="48.5" cy="48.5" r="48" stroke="white"/> -->
                             <rect class="hero__svg-path" x="48.5807" y="58.0737" width="1.82001" height="20.0201" transform="rotate(-134.997 48.5807 58.0737)" fill="white"/>
                             <rect class="hero__svg-path" x="34.4255" y="43.9161" width="1.82001" height="20.0201" transform="rotate(-44.9975 34.4255 43.9161)" fill="white"/>
                         </svg>
@@ -325,7 +325,7 @@
                         <li class="questions__element">
                             <a href="#questios" class="questions__link">Можно ли забронировать комнату онлайн?
                                 <svg tabindex=0 class="questions__svg" width="46" height="46" viewBox="0 0 46 46" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <circle class="questions__svg-cir" cx="23" cy="23" r="22" stroke="#440F51" stroke-width="2"/>
+                                    <!-- <circle class="questions__svg-cir" cx="23" cy="23" r="22" stroke="#440F51" stroke-width="2"/> -->
                                     <path class="questions__svg-path" d="M22.8305 14H23.5085V34H22.8305V14Z" fill="#440F51"/>
                                     <path d="M13 24.1695V23.4915H33V24.1695H13Z" fill="#440F51"/>
                                     </svg>
@@ -334,7 +334,7 @@
                         <li class="questions__element">
                             <a href="#questios" class="questions__link">Могут ли мне вернуть деньги за бронь?
                                 <svg tabindex=0 class="questions__svg-white" width="46" height="46" viewBox="0 0 46 46" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <circle cx="23.0001" cy="23" r="22" stroke="white" stroke-width="2"/>
+                                    <!-- <circle cx="23.0001" cy="23" r="22" stroke="white" stroke-width="2"/> -->
                                     <path class="questions__svg-path" d="M22.8306 14H23.5086V34H22.8306V14Z" fill="white"/>
                                     <path d="M13.0001 24.1695V23.4915H33.0001V24.1695H13.0001Z" fill="white"/>
                                     </svg>
@@ -343,7 +343,7 @@
                         <li class="questions__element">
                             <a href="#questios" class="questions__link">Какая комната самая популярная?
                                 <svg tabindex=0 class="questions__svg" width="46" height="46" viewBox="0 0 46 46" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <circle class="questions__svg-cir" cx="23" cy="23" r="22" stroke="#440F51" stroke-width="2"/>
+                                    <!-- <circle class="questions__svg-cir" cx="23" cy="23" r="22" stroke="#440F51" stroke-width="2"/> -->
                                     <path class="questions__svg-path" d="M22.8305 14H23.5085V34H22.8305V14Z" fill="#440F51"/>
                                     <path d="M13 24.1695V23.4915H33V24.1695H13Z" fill="#440F51"/>
                                     </svg>
@@ -352,7 +352,7 @@
                         <li class="questions__element">
                             <a href="#questios" class="questions__link">Как получить VIP карту?
                                 <svg tabindex=0 class="questions__svg-white" width="46" height="46" viewBox="0 0 46 46" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <circle cx="23.0001" cy="23" r="22" stroke="white" stroke-width="2"/>
+                                    <!-- <circle cx="23.0001" cy="23" r="22" stroke="white" stroke-width="2"/> -->
                                     <path class="questions__svg-path" d="M22.8306 14H23.5086V34H22.8306V14Z" fill="white"/>
                                     <path d="M13.0001 24.1695V23.4915H33.0001V24.1695H13.0001Z" fill="white"/>
                                     </svg>
@@ -361,7 +361,7 @@
                         <li class="questions__element">
                             <a href="#questios" class="questions__link">Какая комната самая популярная
                                 <svg tabindex=0 class="questions__svg" width="46" height="46" viewBox="0 0 46 46" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <circle class="questions__svg-cir" cx="23" cy="23" r="22" stroke="#440F51" stroke-width="2"/>
+                                    <!-- <circle class="questions__svg-cir" cx="23" cy="23" r="22" stroke="#440F51" stroke-width="2"/> -->
                                     <path class="questions__svg-path" d="M22.8305 14H23.5085V34H22.8305V14Z" fill="#440F51"/>
                                     <path  d="M13 24.1695V23.4915H33V24.1695H13Z" fill="#440F51"/>
                                     </svg>
