GO-transition-edit

--- a/index.html
+++ b/index.html
@@ -437,7 +437,8 @@
                     <div class="footer__address">
                         <p class="footer__text">© Game Over, 2022</p>
                         <div class="footer__wrap-link">
-                            <a href="https://telegram.im/@AnastasiaIlina" class="footer__link" target="_blank">Design by Anastasia Ilina</a>
+
+                            <p class="footer__text">Design by <a href="https://telegram.im/@AnastasiaIlina" class="footer__link" target="_blank"> Anastasia Ilina</a></p>
                             <a href="mailto:ilina9825@gmail.com" class="footer__link"  target="_blank">ilina9825@gmail.com</a>
                         </div>
                     </div>
