--- a/index.html
+++ b/index.html
@@ -59,16 +59,14 @@
                     </div>
                     <a class="hero__link-booking" href="#booking">Забронировать</a>
 
-                    <a class="hero__link" href="#rest">
-                        <svg tabindex=0 class="hero__link-img"
-                            width="97" height="97" viewbox="0 0 97 97" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <!-- <circle class="hero__svg-path" cx="48.5" cy="48.5" r="48" stroke="white"/> -->
-                            <rect class="hero__svg-path" x="48.5807" y="58.0737" width="1.82001" height="20.0201" transform="rotate(-134.997 48.5807 58.0737)" fill="white"/>
-                            <rect class="hero__svg-path" x="34.4255" y="43.9161" width="1.82001" height="20.0201" transform="rotate(-44.9975 34.4255 43.9161)" fill="white"/>
-                        </svg>
-                        <!-- <img src="images/hero/down.svg" alt="down-button" class="hero__link-img"> -->
-                       
-                    </a>
+                        <a class="hero__link" href="#rest">
+                            <svg class="hero__link-img"
+                                width="97" height="97" viewbox="0 0 97 97" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <!-- <circle class="hero__svg-path" cx="48.5" cy="48.5" r="48" stroke="white"/> -->
+                                <rect class="hero__svg-path" x="48.5807" y="58.0737" width="1.82001" height="20.0201" transform="rotate(-134.997 48.5807 58.0737)" fill="white"/>
+                                <rect class="hero__svg-path" x="34.4255" y="43.9161" width="1.82001" height="20.0201" transform="rotate(-44.9975 34.4255 43.9161)" fill="white"/>
+                            </svg>
+                        </a>
                 </div>
             </section>
 
