GO-var gradienr

--- a/index.html
+++ b/index.html
@@ -286,27 +286,33 @@
                     <ul class="rewiews__list" id="rewiews">
                         <li class="rewiews__element">
                             <figure class="rewiews__autor">
-                                <img class= "rewiews__avatar" src="images/rewiews/maks.jpg"
-                                    aria-hidden="true"
-                                    alt="Аватар автора отзыва">
+                                <div class="rewiews__gradient">
+                                    <img class= "rewiews__avatar" src="images/rewiews/maks.jpg"
+                                        aria-hidden="true"
+                                        alt="Аватар автора отзыва">
+                                </div>
                                 <figcaption class="rewiews__caption">Макс Самойлов</figcaption>
                             </figure>
                             <p class="rewiews__text">Отмечали здесь день рождения с компанией друзей, все было очень круто! VR очки это просто бомба, никогда еще я не был в таком полном игровом погружении. Сервис на высоте!</p>
                         </li>
                         <li class="rewiews__element">
                             <figure class="rewiews__autor">
-                                <img class= "rewiews__avatar" src="images/rewiews/oks.jpg"
-                                    aria-hidden="true"
-                                    alt="Аватар автора отзыва">
+                                <div class="rewiews__gradient">
+                                    <img class= "rewiews__avatar" src="images/rewiews/oks.jpg"
+                                        aria-hidden="true"
+                                        alt="Аватар автора отзыва">
+                                </div>
                                 <figcaption class="rewiews__caption">Оксана Григорьева</figcaption>
                             </figure>
                             <p class="rewiews__text">Были в комнате Дикий Запад, пели в караоке под Шакиру, отличный получился корпоратив! У нас в городе больше нет подобных заведений</p>
                         </li>
                         <li class="rewiews__element">
                             <figure class="rewiews__autor">
-                                <img class= "rewiews__avatar" src="images/rewiews/nik.jpg"
-                                    aria-hidden="true"
-                                    alt="Аватар автора отзыва">
+                                <div class="rewiews__gradient">
+                                    <img class= "rewiews__avatar" src="images/rewiews/nik.jpg"
+                                        aria-hidden="true"
+                                        alt="Аватар автора отзыва">
+                                </div>
                                 <figcaption class="rewiews__caption">Никита Ященко</figcaption>
                             </figure>
                         <p class="rewiews__text">Немного подвисала игра в VR очках, а так все норм. Крутое оформление комнаты в стиле звездных войн, попал в атмосферу космоса</p>
